--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
+
 * {
   box-sizing: border-box;
 }
@@ -6,4 +8,62 @@ $primary-color: #444;
 body {
   background: $primary-color;
   color: #ffffff;
+  height: 100%;
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
+}
+
+// Headings
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
+  //nest with &
+  &.lg-heading {
+    font-size: 6rem;
+  }
+
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    //rgba wrap and adds opacity
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  // how close an element is, or closer to you
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-color;
+        transition: color 0.8s ease-out;
+      }
+    }
+  }
 }
