--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,32 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(../dist/img/background.jpg);
-$ @mixin easeOut {
+$home-image: url(../img/background.jpg);
+$background-opacity: 0.9;
+
+@mixin easeOut {
   transition: color 0.7s ease-out;
+}
+
+@mixin background {
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+      // sudo element
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background: rgba($primary-color, $background-opacity);
+      }
+    }
+  }
 }
 
 * {
@@ -11,6 +34,7 @@ $ @mixin easeOut {
 }
 
 body {
+  @include background;
   background: $primary-color;
   color: #ffffff;
   height: 100%;
