--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@ h3 {
   font-weight: 400;
   //nest with &
   &.lg-heading {
-    font-size: 6rem;
+    font-size: 3rem;
   }
 
   &.sm-heading {
@@ -62,7 +62,7 @@ main {
 
       &:hover {
         color: $secondary-color;
-        @include easeOut();
+        @include easeOut;
       }
     }
   }
