--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -108,6 +108,9 @@
       // Slide in from right
       transform: translate3d(0, 0, 0);
     }
+    &.current > a {
+      color: $secondary-color;
+    }
   }
 
   .nav-link {
@@ -120,6 +123,9 @@
     color: #fff;
     text-decoration: none;
     @include easeOut;
+    &:hover {
+      color: $secondary-color;
+    }
   }
 }
 
