--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -45,6 +45,17 @@
       height: 150px;
     }
   }
+  // map out what you want and where you want, so powerful
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+
+    grid-template-columns: 1fr;
+  }
 }
 // Smartphones
 
