--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -94,7 +94,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url(../img/lgp.jpg);
+      background: url("../img/lgp.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
