--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
+  padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
@@ -24,7 +25,7 @@ h3 {
   font-weight: 400;
   //nest with &
   &.lg-heading {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 
   &.sm-heading {
@@ -52,7 +53,8 @@ header {
 }
 
 main {
-  padding: 4rem;
+  padding: 5rem;
+
   //   height: 100%;
   // this creates a sticky footer
   min-height: calc(100vh - 60px);
