--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,16 @@
 // Wide Screens
 
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 // Desktop and Laptops
 
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 // Tablets & Small Laptops
 
@@ -16,6 +22,10 @@
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+    }
+
+    .projects {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
@@ -62,5 +72,9 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
