--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -50,7 +50,7 @@
     transform: translate3d(100, 0, 0);
 
     .portrait {
-      background: url("../img/lgp.jpg");
+      background: url("../img/smallp.jpg");
       width: 150px;
       height: 150px;
     }
