--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -50,7 +50,8 @@
     transform: translate3d(100, 0, 0);
 
     .portrait {
-      background: url("../img/smallp.jpg");
+      background: url("../img/portimg2.jpeg");
+      background-position: center;
       width: 150px;
       height: 150px;
     }
