--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -95,6 +95,7 @@
       width: 300px;
       height: 300px;
       background: url("../img/portimg1.jpeg");
+      filter: brightness(100%);
       background-position: center;
       border-radius: 50%;
       border: solid 3px $secondary-color;
