--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,8 @@ main {
     text-align: center; }
     main .lg-heading {
       line-height: 1;
-      margin-bottom: 1rem; }
+      margin-bottom: 1rem;
+      padding: 1rem; }
     main .projects {
       grid-template-columns: repeat(2, 1fr); }
   ul.menu-nav,
@@ -290,6 +291,7 @@ main {
 
 @media screen and (max-width: 500px) {
   main#home h1 {
-    margin-top: 10vh; }
+    margin-top: 10vh;
+    padding: 1rem; }
   .projects {
     grid-template-columns: repeat(1, 1fr); } }
