--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -22,6 +22,7 @@
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+      padding: 1rem;
     }
 
     .projects {
@@ -73,10 +74,19 @@
 // Smartphones
 
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
-  }
+  main {
+    align-items: center;
+    text-align: center;
 
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      padding: 1rem;
+    }
+    main#home h1 {
+      margin-top: 10vh;
+    }
+  }
   .projects {
     grid-template-columns: repeat(1, 1fr);
   }
