--- a/css/main.css
+++ b/css/main.css
@@ -290,8 +290,14 @@ main {
     grid-template-columns: 1fr; } }
 
 @media screen and (max-width: 500px) {
-  main#home h1 {
-    margin-top: 10vh;
-    padding: 1rem; }
+  main {
+    align-items: center;
+    text-align: center; }
+    main .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      padding: 1rem; }
+    main main#home h1 {
+      margin-top: 10vh; }
   .projects {
     grid-template-columns: repeat(1, 1fr); } }
