h1 mobile padding fixed

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -74,6 +74,9 @@
 // Smartphones
 
 @include mediaSm {
+  h1 {
+    padding-right: 0.8rem;
+  }
   main {
     align-items: center;
     text-align: center;
